# 14.docker

./: Dockerfile  main.py  pyproject.toml
views/: __init__.py  calc.py  items.py
