[tool.poetry]
name = "14.deps-and-docker"
version = "0.1.0"
description = ""
authors = ["sverlobaka <sverlobaka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = {extras = ["email"], version = "^2.5.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
